# stm32u5lib

./: .devcontainer.json  .envrc  .gitignore  Cargo.toml  GEMINI.md  Justfile  Makefile  build.rs  build.zig  build.zig.zon  devbox.json  devenv.nix  devenv.yaml  flake.nix  lcov.info  memory.x  readme.md  toolchains.sh
.antigravitycli/: 755704c2-26de-48b9-be52-9b001e6580a0.json
.cargo/: config.toml
.devcontainer/: Dockerfile  Dockerfile.txt  devcontainer.json
.github/workflows/: ci.yml
docs/rm0456_split/: combined_toc.txt  toc.txt  toc_part2.txt  toc_part3.txt  toc_part4.txt
docs/rm0456_split/chapters/: 0127_Documentation_conventions.md  0128_Glossary.md  0129_Memory_and_bus_architecture.md  0130_Implementation_of_slaves_on_STM32U5_Series.md  0131_Fast_C-bus.md  0132_S-bus.md  0133_GFXMMU-bus.md  0134_Arm_TrustZone_security_architecture.md  0135_Default_Arm_TrustZone_security_state.md  0136_Arm_TrustZone_peripheral_classification.md  0138_TrustZone_aware_peripherals.md  0140_Memory_organization.md  0141_Memory_map_and_register_boundary_addresses.md  0145_Memory_map_and_peripheral_register_boundary_addresses.md  0149_Embedded_SRAMs.md  0150_Flash_memory_overview.md  0151_System_security.md  0152_Secure_install.md  0153_Unique_boot_entry_and_BOOT_LOCK.md  0154_Resource_isolation_using_TrustZone.md  0155_Armv8-M_security_extension_of_Cortex-M33.md  0157_Memory_and_peripheral_allocation_using_GTZC.md  0159_MPCWMx_resources.md  0161_Managing_security_in_TrustZone-aware_peripherals.md  0163_DMA_channel_use_security.md  0166_Secure_alternate_function_between_peripherals_and_allocated_IOs.md  0167_Nonsecure_peripheral_functions_that_can_be_connected_to_secure_IOs.md  0168_Activating_TrustZone_security.md  0169_Deactivating_TrustZone_security.md  0170_RSSLIB_functions.md  0171_Resource_isolation_using_Cortex_privileged_mode.md  0173_DMA_channel_use_privilege.md  0175_Secure_execution.md  0176_Embedded_flash_memory_write_protection.md  0177_Internal_tampers_in_TAMP.md  0178_Secure_storage.md  0179_Hardware_secret_key_management.md  0180_Unique_ID.md  0181_Secure_AES_co-processor_SAES.md  0182_On-the-fly_decryption_engine_OTFDEC.md  (+1226 more)
docs/rm0456_split/images/: img-011.ppm  img-023.ppm  img-033.ppm  img-035.ppm  img-089.ppm  img-1014.ppm  img-1025.ppm  img-1026.ppm  img-1035.ppm  img-1075.ppm  img-1095.ppm  img-1120.ppm  img-1121.ppm  img-1128.ppm  img-1130.ppm  img-114.ppm  img-1147.ppm  img-1150.ppm  img-1174.ppm  img-1181.ppm  img-1182.ppm  img-1184.ppm  img-119.ppm  img-1208.ppm  img-1210.ppm  img-129.ppm  img-1300.ppm  img-1301.ppm  img-1310.ppm  img-1320.ppm  img-1331.ppm  img-1332.ppm  img-1334.ppm  img-1363.ppm  img-1372.ppm  img-1381.ppm  img-1387.ppm  img-1393.ppm  img-1395.ppm  img-1409.ppm  (+323 more)
docs/rm0456_split/pages/: page_1.txt  page_10.txt  page_100.txt  page_1000.txt  page_1001.txt  page_1002.txt  page_1003.txt  page_1004.txt  page_1005.txt  page_1006.txt  page_1007.txt  page_1008.txt  page_1009.txt  page_101.txt  page_1010.txt  page_1011.txt  page_1012.txt  page_1013.txt  page_1014.txt  page_1015.txt  page_1016.txt  page_1017.txt  page_1018.txt  page_1019.txt  page_102.txt  page_1020.txt  page_1021.txt  page_1022.txt  page_1023.txt  page_1024.txt  page_1025.txt  page_1026.txt  page_1027.txt  page_1028.txt  page_1029.txt  page_103.txt  page_1030.txt  page_1031.txt  page_1032.txt  page_1033.txt  (+3504 more)
examples/: Cargo.toml  Makefile  build.rs  camera.rs
examples/.cargo/: config.toml
examples/src/: camera.rs  ebcmd.rs  usb_util.rs
host_tests/: Cargo.toml
host_tests/src/: lib.rs
scripts/: test_configs.sh  test_usb_acm.py  test_usb_acm.zig
src/: adc.rs  camera.rs  clock.rs  com_interface.rs  dcmi.rs  dma.rs  exti.rs  flash.rs  fmt.rs  gi2c.rs  gpio.rs  gtim.rs  hal.rs  i2c.rs  lib.rs  low_power.rs  lptim.rs  main.rs.bak  necleo_u575.rs  otg.rs  ov5640_reg.rs  pwr.rs  queue.rs  rtc.rs  sd_device.rs  sdmmc.rs  shared_i2c.rs  tim.rs  time_math.rs  usart.rs  usb.rs  usb_util.rs  usb_util.rs.bak  utils.rs
src/backup/otg_fs/: control_pipe.rs  global_states.rs  interrupt.rs  mod.rs  note.md  power.rs
src/backup/otg_hs/: control_pipe.rs  endpoint.rs  global_states.rs  interrupt.rs  mod.rs  note.md  power.rs
src/backup/usb_common/: descriptor.rs  mod.rs
src/drivers/: icm20948.rs  mod.rs
src/drivers/ov5640/: mod.rs  mod_new.rs  ov5640_reg.rs
src/otg_fs/: control_pipe.rs  endpoint.rs  global_states.rs  interrupt.rs  mod.rs  phy_type.rs  power.rs
src/otg_hs/: control_pipe.rs  endpoint.rs  global_states.rs  interrupt.rs  mod.rs  note.md  power.rs
src/usb/: bus.rs  controlpipe.rs  driver.rs  endpoint.rs  interrupt.rs  mod.rs  reg.rs
src/usb_common/: descriptor.rs  mod.rs
src/usb_otg/: bus.rs  control_pipe.rs  endpoint.rs  mod.rs  mod_new.rs  phy_type.rs  usb.rs
src/usb_otg_hs/: bus.rs  control_pipe.rs  descriptor.rs  endpoint.rs  endpoint_new.rs  global_states.rs  interrupt.rs  mod.rs  mod_new.rs  note.md  power.rs  tmp.txt
src_zig/: main.zig
tests/: clock.rs  exti_btn.rs  flash.rs  gpio.rs  i2c.rs  led.rs  lptim.rs  lsi_test.rs  panic.rs  profile.rs  rtc.rs  tim.rs  usb_cdc_acm.rs  usb_enumeration.rs  walltimer_test.rs
tests/host_tests/: Cargo.toml
tests/host_tests/src/: lib.rs
u5-lib/: Cargo.toml  readme.md
u5-lib/src/: camera.rs  clock.rs  dcmi.rs  dma.rs  exti.rs  gi2c.rs  gpio.rs  gtim.rs  lib.rs  low_power.rs  lptim.rs  main.rs  ov5640_reg.rs  rtc.rs  sd_device.rs  sdmmc.rs  usb_util.rs
