[package]
name = "u5-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3.5" }
defmt-rtt = { version = "0.4.0" }
defmt-itm = { version = "0.3.0" }
sdio-host = { version = "0.9.0" }
# embedded-sdmmc = { version = "0.6.0", features = ["defmt-log"] }
embedded-sdmmc = { version = "0.6.0", default-features = false, features = [
    "defmt-log",
] }


cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
critical-section = "1.1.2"
cortex-m-rt = { version = "0.7.3" }
futures = { version = "0.3.17", default-features = false, fetures = [
    "async-await",
] }
#stm32-data-e702b4d564bc9e3c8a5c0141a11efdc5f7ee8f24
#stm32-metapac = { git = "https://github.com/embassy-rs/stm32-data-generated", tag = "stm32-data-7117ad49c06fa00c388130a34977e029910083bd", features = [
# stm32-metapac = { path = "../stm32_data/", tag = "stm32-data-e702b4d564bc9e3c8a5c0141a11efdc5f7ee8f24", features = [
stm32-metapac = { path = "../stm32_data/stm32-metapac", features = [
    "memory-x",
    "rt",
    # "stm32u575zi",
    "stm32u575ri",
    # "stm32u5a5qj",
] }
embassy-sync = { version = "0.5.0" }
# embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "b4bc9ac028568dfb3896dfb00cbd1e181863fd64" }
[dependencies.embassy-executor]
features = ["nightly", "arch-cortex-m", "executor-thread"]
git = "https://github.com/embassy-rs/embassy"
rev = "a741571"

[dependencies.embassy-usb]
git = "https://github.com/embassy-rs/embassy"
rev = "a741571"
features = ["defmt"]

[dependencies.embassy-usb-driver]
git = "https://github.com/embassy-rs/embassy"
rev = "a741571"
features = ["defmt"]

#[dependencies.embassy-stm32]
#features = [
#    # "stm32u575zi",
#    "stm32u575ri",
##    "unstable-pac",
##    "memory-x",
##    "time-driver-any",
##    "exti",
#    "defmt",
#    "rt",
#]
#rev = "a741571"
#git = "https://github.com/embassy-rs/embassy"
#version = "0.1.0"

# [dependencies.embassy-time]
# git = "https://github.com/embassy-rs/embassy"
# rev = "a741571"
# rev = "b4bc9ac028568dfb3896dfb00cbd1e181863fd64"

[profile.dev]
lto = true
opt-level = "z"
debug = true


[lib]
name = "u5_lib"
path = "src/lib.rs"
test = false
bench = false

[[bin]]
name = "btn"
path = "src/bin/btn.rs"
test = false
bench = false

[[bin]]
name = "led"
path = "src/bin/led.rs"
test = false
bench = false

[[bin]]
name = "usb_sd_cam"
path = "src/bin/usb_sd_cam.rs"
test = false
bench = false

[[bin]]
name =  "usb_u575"
path = "src/bin/usb_u575.rs"
test = false
bench = false



# add default features for all supported chips


[features]
default = [
    #    "stm32u575zi",
    "stm32u575ri",
    "defmt",
    #    "stm32u5a5qj",
]
defmt = []
#! ## Chip-selection features
#! Select your chip by specifying the model as a feature, e.g. `stm32c011d6`.
#! Check the `Cargo.toml` for the latest list of supported chips.
#!
#! **Important:** Do not forget to adapt the target chip in your toolchain,
#! e.g. in `.cargo/config.toml`.

stm32c011d6 = ["stm32-metapac/stm32c011d6"]
stm32c011f4 = ["stm32-metapac/stm32c011f4"]
stm32c011f6 = ["stm32-metapac/stm32c011f6"]
stm32c011j4 = ["stm32-metapac/stm32c011j4"]
stm32c011j6 = ["stm32-metapac/stm32c011j6"]
stm32c031c4 = ["stm32-metapac/stm32c031c4"]
stm32c031c6 = ["stm32-metapac/stm32c031c6"]
stm32c031f4 = ["stm32-metapac/stm32c031f4"]
stm32c031f6 = ["stm32-metapac/stm32c031f6"]
stm32c031g4 = ["stm32-metapac/stm32c031g4"]
stm32c031g6 = ["stm32-metapac/stm32c031g6"]
stm32c031k4 = ["stm32-metapac/stm32c031k4"]
stm32c031k6 = ["stm32-metapac/stm32c031k6"]
stm32f030c6 = ["stm32-metapac/stm32f030c6"]
stm32f030c8 = ["stm32-metapac/stm32f030c8"]
stm32f030cc = ["stm32-metapac/stm32f030cc"]
stm32f030f4 = ["stm32-metapac/stm32f030f4"]
stm32f030k6 = ["stm32-metapac/stm32f030k6"]
stm32f030r8 = ["stm32-metapac/stm32f030r8"]
stm32f030rc = ["stm32-metapac/stm32f030rc"]
stm32f031c4 = ["stm32-metapac/stm32f031c4"]
stm32f031c6 = ["stm32-metapac/stm32f031c6"]
stm32f031e6 = ["stm32-metapac/stm32f031e6"]
stm32f031f4 = ["stm32-metapac/stm32f031f4"]
stm32f031f6 = ["stm32-metapac/stm32f031f6"]
stm32f031g4 = ["stm32-metapac/stm32f031g4"]
stm32f031g6 = ["stm32-metapac/stm32f031g6"]
stm32f031k4 = ["stm32-metapac/stm32f031k4"]
stm32f031k6 = ["stm32-metapac/stm32f031k6"]
stm32f038c6 = ["stm32-metapac/stm32f038c6"]
stm32f038e6 = ["stm32-metapac/stm32f038e6"]
stm32f038f6 = ["stm32-metapac/stm32f038f6"]
stm32f038g6 = ["stm32-metapac/stm32f038g6"]
stm32f038k6 = ["stm32-metapac/stm32f038k6"]
stm32f042c4 = ["stm32-metapac/stm32f042c4"]
stm32f042c6 = ["stm32-metapac/stm32f042c6"]
stm32f042f4 = ["stm32-metapac/stm32f042f4"]
stm32f042f6 = ["stm32-metapac/stm32f042f6"]
stm32f042g4 = ["stm32-metapac/stm32f042g4"]
stm32f042g6 = ["stm32-metapac/stm32f042g6"]
stm32f042k4 = ["stm32-metapac/stm32f042k4"]
stm32f042k6 = ["stm32-metapac/stm32f042k6"]
stm32f042t6 = ["stm32-metapac/stm32f042t6"]
stm32f048c6 = ["stm32-metapac/stm32f048c6"]
stm32f048g6 = ["stm32-metapac/stm32f048g6"]
stm32f048t6 = ["stm32-metapac/stm32f048t6"]
stm32f051c4 = ["stm32-metapac/stm32f051c4"]
stm32f051c6 = ["stm32-metapac/stm32f051c6"]
stm32f051c8 = ["stm32-metapac/stm32f051c8"]
stm32f051k4 = ["stm32-metapac/stm32f051k4"]
stm32f051k6 = ["stm32-metapac/stm32f051k6"]
stm32f051k8 = ["stm32-metapac/stm32f051k8"]
stm32f051r4 = ["stm32-metapac/stm32f051r4"]
stm32f051r6 = ["stm32-metapac/stm32f051r6"]
stm32f051r8 = ["stm32-metapac/stm32f051r8"]
stm32f051t8 = ["stm32-metapac/stm32f051t8"]
stm32f058c8 = ["stm32-metapac/stm32f058c8"]
stm32f058r8 = ["stm32-metapac/stm32f058r8"]
stm32f058t8 = ["stm32-metapac/stm32f058t8"]
stm32f070c6 = ["stm32-metapac/stm32f070c6"]
stm32f070cb = ["stm32-metapac/stm32f070cb"]
stm32f070f6 = ["stm32-metapac/stm32f070f6"]
stm32f070rb = ["stm32-metapac/stm32f070rb"]
stm32f071c8 = ["stm32-metapac/stm32f071c8"]
stm32f071cb = ["stm32-metapac/stm32f071cb"]
stm32f071rb = ["stm32-metapac/stm32f071rb"]
stm32f071v8 = ["stm32-metapac/stm32f071v8"]
stm32f071vb = ["stm32-metapac/stm32f071vb"]
stm32f072c8 = ["stm32-metapac/stm32f072c8"]
stm32f072cb = ["stm32-metapac/stm32f072cb"]
stm32f072r8 = ["stm32-metapac/stm32f072r8"]
stm32f072rb = ["stm32-metapac/stm32f072rb"]
stm32f072v8 = ["stm32-metapac/stm32f072v8"]
stm32f072vb = ["stm32-metapac/stm32f072vb"]
stm32f078cb = ["stm32-metapac/stm32f078cb"]
stm32f078rb = ["stm32-metapac/stm32f078rb"]
stm32f078vb = ["stm32-metapac/stm32f078vb"]
stm32f091cb = ["stm32-metapac/stm32f091cb"]
stm32f091cc = ["stm32-metapac/stm32f091cc"]
stm32f091rb = ["stm32-metapac/stm32f091rb"]
stm32f091rc = ["stm32-metapac/stm32f091rc"]
stm32f091vb = ["stm32-metapac/stm32f091vb"]
stm32f091vc = ["stm32-metapac/stm32f091vc"]
stm32f098cc = ["stm32-metapac/stm32f098cc"]
stm32f098rc = ["stm32-metapac/stm32f098rc"]
stm32f098vc = ["stm32-metapac/stm32f098vc"]
stm32f100c4 = ["stm32-metapac/stm32f100c4"]
stm32f100c6 = ["stm32-metapac/stm32f100c6"]
stm32f100c8 = ["stm32-metapac/stm32f100c8"]
stm32f100cb = ["stm32-metapac/stm32f100cb"]
stm32f100r4 = ["stm32-metapac/stm32f100r4"]
stm32f100r6 = ["stm32-metapac/stm32f100r6"]
stm32f100r8 = ["stm32-metapac/stm32f100r8"]
stm32f100rb = ["stm32-metapac/stm32f100rb"]
stm32f100rc = ["stm32-metapac/stm32f100rc"]
stm32f100rd = ["stm32-metapac/stm32f100rd"]
stm32f100re = ["stm32-metapac/stm32f100re"]
stm32f100v8 = ["stm32-metapac/stm32f100v8"]
stm32f100vb = ["stm32-metapac/stm32f100vb"]
stm32f100vc = ["stm32-metapac/stm32f100vc"]
stm32f100vd = ["stm32-metapac/stm32f100vd"]
stm32f100ve = ["stm32-metapac/stm32f100ve"]
stm32f100zc = ["stm32-metapac/stm32f100zc"]
stm32f100zd = ["stm32-metapac/stm32f100zd"]
stm32f100ze = ["stm32-metapac/stm32f100ze"]
stm32f101c4 = ["stm32-metapac/stm32f101c4"]
stm32f101c6 = ["stm32-metapac/stm32f101c6"]
stm32f101c8 = ["stm32-metapac/stm32f101c8"]
stm32f101cb = ["stm32-metapac/stm32f101cb"]
stm32f101r4 = ["stm32-metapac/stm32f101r4"]
stm32f101r6 = ["stm32-metapac/stm32f101r6"]
stm32f101r8 = ["stm32-metapac/stm32f101r8"]
stm32f101rb = ["stm32-metapac/stm32f101rb"]
stm32f101rc = ["stm32-metapac/stm32f101rc"]
stm32f101rd = ["stm32-metapac/stm32f101rd"]
stm32f101re = ["stm32-metapac/stm32f101re"]
stm32f101rf = ["stm32-metapac/stm32f101rf"]
stm32f101rg = ["stm32-metapac/stm32f101rg"]
stm32f101t4 = ["stm32-metapac/stm32f101t4"]
stm32f101t6 = ["stm32-metapac/stm32f101t6"]
stm32f101t8 = ["stm32-metapac/stm32f101t8"]
stm32f101tb = ["stm32-metapac/stm32f101tb"]
stm32f101v8 = ["stm32-metapac/stm32f101v8"]
stm32f101vb = ["stm32-metapac/stm32f101vb"]
stm32f101vc = ["stm32-metapac/stm32f101vc"]
stm32f101vd = ["stm32-metapac/stm32f101vd"]
stm32f101ve = ["stm32-metapac/stm32f101ve"]
stm32f101vf = ["stm32-metapac/stm32f101vf"]
stm32f101vg = ["stm32-metapac/stm32f101vg"]
stm32f101zc = ["stm32-metapac/stm32f101zc"]
stm32f101zd = ["stm32-metapac/stm32f101zd"]
stm32f101ze = ["stm32-metapac/stm32f101ze"]
stm32f101zf = ["stm32-metapac/stm32f101zf"]
stm32f101zg = ["stm32-metapac/stm32f101zg"]
stm32f102c4 = ["stm32-metapac/stm32f102c4"]
stm32f102c6 = ["stm32-metapac/stm32f102c6"]
stm32f102c8 = ["stm32-metapac/stm32f102c8"]
stm32f102cb = ["stm32-metapac/stm32f102cb"]
stm32f102r4 = ["stm32-metapac/stm32f102r4"]
stm32f102r6 = ["stm32-metapac/stm32f102r6"]
stm32f102r8 = ["stm32-metapac/stm32f102r8"]
stm32f102rb = ["stm32-metapac/stm32f102rb"]
stm32f103c4 = ["stm32-metapac/stm32f103c4"]
stm32f103c6 = ["stm32-metapac/stm32f103c6"]
stm32f103c8 = ["stm32-metapac/stm32f103c8"]
stm32f103cb = ["stm32-metapac/stm32f103cb"]
stm32f103r4 = ["stm32-metapac/stm32f103r4"]
stm32f103r6 = ["stm32-metapac/stm32f103r6"]
stm32f103r8 = ["stm32-metapac/stm32f103r8"]
stm32f103rb = ["stm32-metapac/stm32f103rb"]
stm32f103rc = ["stm32-metapac/stm32f103rc"]
stm32f103rd = ["stm32-metapac/stm32f103rd"]
stm32f103re = ["stm32-metapac/stm32f103re"]
stm32f103rf = ["stm32-metapac/stm32f103rf"]
stm32f103rg = ["stm32-metapac/stm32f103rg"]
stm32f103t4 = ["stm32-metapac/stm32f103t4"]
stm32f103t6 = ["stm32-metapac/stm32f103t6"]
stm32f103t8 = ["stm32-metapac/stm32f103t8"]
stm32f103tb = ["stm32-metapac/stm32f103tb"]
stm32f103v8 = ["stm32-metapac/stm32f103v8"]
stm32f103vb = ["stm32-metapac/stm32f103vb"]
stm32f103vc = ["stm32-metapac/stm32f103vc"]
stm32f103vd = ["stm32-metapac/stm32f103vd"]
stm32f103ve = ["stm32-metapac/stm32f103ve"]
stm32f103vf = ["stm32-metapac/stm32f103vf"]
stm32f103vg = ["stm32-metapac/stm32f103vg"]
stm32f103zc = ["stm32-metapac/stm32f103zc"]
stm32f103zd = ["stm32-metapac/stm32f103zd"]
stm32f103ze = ["stm32-metapac/stm32f103ze"]
stm32f103zf = ["stm32-metapac/stm32f103zf"]
stm32f103zg = ["stm32-metapac/stm32f103zg"]
stm32f105r8 = ["stm32-metapac/stm32f105r8"]
stm32f105rb = ["stm32-metapac/stm32f105rb"]
stm32f105rc = ["stm32-metapac/stm32f105rc"]
stm32f105v8 = ["stm32-metapac/stm32f105v8"]
stm32f105vb = ["stm32-metapac/stm32f105vb"]
stm32f105vc = ["stm32-metapac/stm32f105vc"]
stm32f107rb = ["stm32-metapac/stm32f107rb"]
stm32f107rc = ["stm32-metapac/stm32f107rc"]
stm32f107vb = ["stm32-metapac/stm32f107vb"]
stm32f107vc = ["stm32-metapac/stm32f107vc"]
stm32f205rb = ["stm32-metapac/stm32f205rb"]
stm32f205rc = ["stm32-metapac/stm32f205rc"]
stm32f205re = ["stm32-metapac/stm32f205re"]
stm32f205rf = ["stm32-metapac/stm32f205rf"]
stm32f205rg = ["stm32-metapac/stm32f205rg"]
stm32f205vb = ["stm32-metapac/stm32f205vb"]
stm32f205vc = ["stm32-metapac/stm32f205vc"]
stm32f205ve = ["stm32-metapac/stm32f205ve"]
stm32f205vf = ["stm32-metapac/stm32f205vf"]
stm32f205vg = ["stm32-metapac/stm32f205vg"]
stm32f205zc = ["stm32-metapac/stm32f205zc"]
stm32f205ze = ["stm32-metapac/stm32f205ze"]
stm32f205zf = ["stm32-metapac/stm32f205zf"]
stm32f205zg = ["stm32-metapac/stm32f205zg"]
stm32f207ic = ["stm32-metapac/stm32f207ic"]
stm32f207ie = ["stm32-metapac/stm32f207ie"]
stm32f207if = ["stm32-metapac/stm32f207if"]
stm32f207ig = ["stm32-metapac/stm32f207ig"]
stm32f207vc = ["stm32-metapac/stm32f207vc"]
stm32f207ve = ["stm32-metapac/stm32f207ve"]
stm32f207vf = ["stm32-metapac/stm32f207vf"]
stm32f207vg = ["stm32-metapac/stm32f207vg"]
stm32f207zc = ["stm32-metapac/stm32f207zc"]
stm32f207ze = ["stm32-metapac/stm32f207ze"]
stm32f207zf = ["stm32-metapac/stm32f207zf"]
stm32f207zg = ["stm32-metapac/stm32f207zg"]
stm32f215re = ["stm32-metapac/stm32f215re"]
stm32f215rg = ["stm32-metapac/stm32f215rg"]
stm32f215ve = ["stm32-metapac/stm32f215ve"]
stm32f215vg = ["stm32-metapac/stm32f215vg"]
stm32f215ze = ["stm32-metapac/stm32f215ze"]
stm32f215zg = ["stm32-metapac/stm32f215zg"]
stm32f217ie = ["stm32-metapac/stm32f217ie"]
stm32f217ig = ["stm32-metapac/stm32f217ig"]
stm32f217ve = ["stm32-metapac/stm32f217ve"]
stm32f217vg = ["stm32-metapac/stm32f217vg"]
stm32f217ze = ["stm32-metapac/stm32f217ze"]
stm32f217zg = ["stm32-metapac/stm32f217zg"]
stm32f301c6 = ["stm32-metapac/stm32f301c6"]
stm32f301c8 = ["stm32-metapac/stm32f301c8"]
stm32f301k6 = ["stm32-metapac/stm32f301k6"]
stm32f301k8 = ["stm32-metapac/stm32f301k8"]
stm32f301r6 = ["stm32-metapac/stm32f301r6"]
stm32f301r8 = ["stm32-metapac/stm32f301r8"]
stm32f302c6 = ["stm32-metapac/stm32f302c6"]
stm32f302c8 = ["stm32-metapac/stm32f302c8"]
stm32f302cb = ["stm32-metapac/stm32f302cb"]
stm32f302cc = ["stm32-metapac/stm32f302cc"]
stm32f302k6 = ["stm32-metapac/stm32f302k6"]
stm32f302k8 = ["stm32-metapac/stm32f302k8"]
stm32f302r6 = ["stm32-metapac/stm32f302r6"]
stm32f302r8 = ["stm32-metapac/stm32f302r8"]
stm32f302rb = ["stm32-metapac/stm32f302rb"]
stm32f302rc = ["stm32-metapac/stm32f302rc"]
stm32f302rd = ["stm32-metapac/stm32f302rd"]
stm32f302re = ["stm32-metapac/stm32f302re"]
stm32f302vb = ["stm32-metapac/stm32f302vb"]
stm32f302vc = ["stm32-metapac/stm32f302vc"]
stm32f302vd = ["stm32-metapac/stm32f302vd"]
stm32f302ve = ["stm32-metapac/stm32f302ve"]
stm32f302zd = ["stm32-metapac/stm32f302zd"]
stm32f302ze = ["stm32-metapac/stm32f302ze"]
stm32f303c6 = ["stm32-metapac/stm32f303c6"]
stm32f303c8 = ["stm32-metapac/stm32f303c8"]
stm32f303cb = ["stm32-metapac/stm32f303cb"]
stm32f303cc = ["stm32-metapac/stm32f303cc"]
stm32f303k6 = ["stm32-metapac/stm32f303k6"]
stm32f303k8 = ["stm32-metapac/stm32f303k8"]
stm32f303r6 = ["stm32-metapac/stm32f303r6"]
stm32f303r8 = ["stm32-metapac/stm32f303r8"]
stm32f303rb = ["stm32-metapac/stm32f303rb"]
stm32f303rc = ["stm32-metapac/stm32f303rc"]
stm32f303rd = ["stm32-metapac/stm32f303rd"]
stm32f303re = ["stm32-metapac/stm32f303re"]
stm32f303vb = ["stm32-metapac/stm32f303vb"]
stm32f303vc = ["stm32-metapac/stm32f303vc"]
stm32f303vd = ["stm32-metapac/stm32f303vd"]
stm32f303ve = ["stm32-metapac/stm32f303ve"]
stm32f303zd = ["stm32-metapac/stm32f303zd"]
stm32f303ze = ["stm32-metapac/stm32f303ze"]
stm32f318c8 = ["stm32-metapac/stm32f318c8"]
stm32f318k8 = ["stm32-metapac/stm32f318k8"]
stm32f328c8 = ["stm32-metapac/stm32f328c8"]
stm32f334c4 = ["stm32-metapac/stm32f334c4"]
stm32f334c6 = ["stm32-metapac/stm32f334c6"]
stm32f334c8 = ["stm32-metapac/stm32f334c8"]
stm32f334k4 = ["stm32-metapac/stm32f334k4"]
stm32f334k6 = ["stm32-metapac/stm32f334k6"]
stm32f334k8 = ["stm32-metapac/stm32f334k8"]
stm32f334r6 = ["stm32-metapac/stm32f334r6"]
stm32f334r8 = ["stm32-metapac/stm32f334r8"]
stm32f358cc = ["stm32-metapac/stm32f358cc"]
stm32f358rc = ["stm32-metapac/stm32f358rc"]
stm32f358vc = ["stm32-metapac/stm32f358vc"]
stm32f373c8 = ["stm32-metapac/stm32f373c8"]
stm32f373cb = ["stm32-metapac/stm32f373cb"]
stm32f373cc = ["stm32-metapac/stm32f373cc"]
stm32f373r8 = ["stm32-metapac/stm32f373r8"]
stm32f373rb = ["stm32-metapac/stm32f373rb"]
stm32f373rc = ["stm32-metapac/stm32f373rc"]
stm32f373v8 = ["stm32-metapac/stm32f373v8"]
stm32f373vb = ["stm32-metapac/stm32f373vb"]
stm32f373vc = ["stm32-metapac/stm32f373vc"]
stm32f378cc = ["stm32-metapac/stm32f378cc"]
stm32f378rc = ["stm32-metapac/stm32f378rc"]
stm32f378vc = ["stm32-metapac/stm32f378vc"]
stm32f398ve = ["stm32-metapac/stm32f398ve"]
stm32f401cb = ["stm32-metapac/stm32f401cb"]
stm32f401cc = ["stm32-metapac/stm32f401cc"]
stm32f401cd = ["stm32-metapac/stm32f401cd"]
stm32f401ce = ["stm32-metapac/stm32f401ce"]
stm32f401rb = ["stm32-metapac/stm32f401rb"]
stm32f401rc = ["stm32-metapac/stm32f401rc"]
stm32f401rd = ["stm32-metapac/stm32f401rd"]
stm32f401re = ["stm32-metapac/stm32f401re"]
stm32f401vb = ["stm32-metapac/stm32f401vb"]
stm32f401vc = ["stm32-metapac/stm32f401vc"]
stm32f401vd = ["stm32-metapac/stm32f401vd"]
stm32f401ve = ["stm32-metapac/stm32f401ve"]
stm32f405oe = ["stm32-metapac/stm32f405oe"]
stm32f405og = ["stm32-metapac/stm32f405og"]
stm32f405rg = ["stm32-metapac/stm32f405rg"]
stm32f405vg = ["stm32-metapac/stm32f405vg"]
stm32f405zg = ["stm32-metapac/stm32f405zg"]
stm32f407ie = ["stm32-metapac/stm32f407ie"]
stm32f407ig = ["stm32-metapac/stm32f407ig"]
stm32f407ve = ["stm32-metapac/stm32f407ve"]
stm32f407vg = ["stm32-metapac/stm32f407vg"]
stm32f407ze = ["stm32-metapac/stm32f407ze"]
stm32f407zg = ["stm32-metapac/stm32f407zg"]
stm32f410c8 = ["stm32-metapac/stm32f410c8"]
stm32f410cb = ["stm32-metapac/stm32f410cb"]
stm32f410r8 = ["stm32-metapac/stm32f410r8"]
stm32f410rb = ["stm32-metapac/stm32f410rb"]
stm32f410t8 = ["stm32-metapac/stm32f410t8"]
stm32f410tb = ["stm32-metapac/stm32f410tb"]
stm32f411cc = ["stm32-metapac/stm32f411cc"]
stm32f411ce = ["stm32-metapac/stm32f411ce"]
stm32f411rc = ["stm32-metapac/stm32f411rc"]
stm32f411re = ["stm32-metapac/stm32f411re"]
stm32f411vc = ["stm32-metapac/stm32f411vc"]
stm32f411ve = ["stm32-metapac/stm32f411ve"]
stm32f412ce = ["stm32-metapac/stm32f412ce"]
stm32f412cg = ["stm32-metapac/stm32f412cg"]
stm32f412re = ["stm32-metapac/stm32f412re"]
stm32f412rg = ["stm32-metapac/stm32f412rg"]
stm32f412ve = ["stm32-metapac/stm32f412ve"]
stm32f412vg = ["stm32-metapac/stm32f412vg"]
stm32f412ze = ["stm32-metapac/stm32f412ze"]
stm32f412zg = ["stm32-metapac/stm32f412zg"]
stm32f413cg = ["stm32-metapac/stm32f413cg"]
stm32f413ch = ["stm32-metapac/stm32f413ch"]
stm32f413mg = ["stm32-metapac/stm32f413mg"]
stm32f413mh = ["stm32-metapac/stm32f413mh"]
stm32f413rg = ["stm32-metapac/stm32f413rg"]
stm32f413rh = ["stm32-metapac/stm32f413rh"]
stm32f413vg = ["stm32-metapac/stm32f413vg"]
stm32f413vh = ["stm32-metapac/stm32f413vh"]
stm32f413zg = ["stm32-metapac/stm32f413zg"]
stm32f413zh = ["stm32-metapac/stm32f413zh"]
stm32f415og = ["stm32-metapac/stm32f415og"]
stm32f415rg = ["stm32-metapac/stm32f415rg"]
stm32f415vg = ["stm32-metapac/stm32f415vg"]
stm32f415zg = ["stm32-metapac/stm32f415zg"]
stm32f417ie = ["stm32-metapac/stm32f417ie"]
stm32f417ig = ["stm32-metapac/stm32f417ig"]
stm32f417ve = ["stm32-metapac/stm32f417ve"]
stm32f417vg = ["stm32-metapac/stm32f417vg"]
stm32f417ze = ["stm32-metapac/stm32f417ze"]
stm32f417zg = ["stm32-metapac/stm32f417zg"]
stm32f423ch = ["stm32-metapac/stm32f423ch"]
stm32f423mh = ["stm32-metapac/stm32f423mh"]
stm32f423rh = ["stm32-metapac/stm32f423rh"]
stm32f423vh = ["stm32-metapac/stm32f423vh"]
stm32f423zh = ["stm32-metapac/stm32f423zh"]
stm32f427ag = ["stm32-metapac/stm32f427ag"]
stm32f427ai = ["stm32-metapac/stm32f427ai"]
stm32f427ig = ["stm32-metapac/stm32f427ig"]
stm32f427ii = ["stm32-metapac/stm32f427ii"]
stm32f427vg = ["stm32-metapac/stm32f427vg"]
stm32f427vi = ["stm32-metapac/stm32f427vi"]
stm32f427zg = ["stm32-metapac/stm32f427zg"]
stm32f427zi = ["stm32-metapac/stm32f427zi"]
stm32f429ag = ["stm32-metapac/stm32f429ag"]
stm32f429ai = ["stm32-metapac/stm32f429ai"]
stm32f429be = ["stm32-metapac/stm32f429be"]
stm32f429bg = ["stm32-metapac/stm32f429bg"]
stm32f429bi = ["stm32-metapac/stm32f429bi"]
stm32f429ie = ["stm32-metapac/stm32f429ie"]
stm32f429ig = ["stm32-metapac/stm32f429ig"]
stm32f429ii = ["stm32-metapac/stm32f429ii"]
stm32f429ne = ["stm32-metapac/stm32f429ne"]
stm32f429ng = ["stm32-metapac/stm32f429ng"]
stm32f429ni = ["stm32-metapac/stm32f429ni"]
stm32f429ve = ["stm32-metapac/stm32f429ve"]
stm32f429vg = ["stm32-metapac/stm32f429vg"]
stm32f429vi = ["stm32-metapac/stm32f429vi"]
stm32f429ze = ["stm32-metapac/stm32f429ze"]
stm32f429zg = ["stm32-metapac/stm32f429zg"]
stm32f429zi = ["stm32-metapac/stm32f429zi"]
stm32f437ai = ["stm32-metapac/stm32f437ai"]
stm32f437ig = ["stm32-metapac/stm32f437ig"]
stm32f437ii = ["stm32-metapac/stm32f437ii"]
stm32f437vg = ["stm32-metapac/stm32f437vg"]
stm32f437vi = ["stm32-metapac/stm32f437vi"]
stm32f437zg = ["stm32-metapac/stm32f437zg"]
stm32f437zi = ["stm32-metapac/stm32f437zi"]
stm32f439ai = ["stm32-metapac/stm32f439ai"]
stm32f439bg = ["stm32-metapac/stm32f439bg"]
stm32f439bi = ["stm32-metapac/stm32f439bi"]
stm32f439ig = ["stm32-metapac/stm32f439ig"]
stm32f439ii = ["stm32-metapac/stm32f439ii"]
stm32f439ng = ["stm32-metapac/stm32f439ng"]
stm32f439ni = ["stm32-metapac/stm32f439ni"]
stm32f439vg = ["stm32-metapac/stm32f439vg"]
stm32f439vi = ["stm32-metapac/stm32f439vi"]
stm32f439zg = ["stm32-metapac/stm32f439zg"]
stm32f439zi = ["stm32-metapac/stm32f439zi"]
stm32f446mc = ["stm32-metapac/stm32f446mc"]
stm32f446me = ["stm32-metapac/stm32f446me"]
stm32f446rc = ["stm32-metapac/stm32f446rc"]
stm32f446re = ["stm32-metapac/stm32f446re"]
stm32f446vc = ["stm32-metapac/stm32f446vc"]
stm32f446ve = ["stm32-metapac/stm32f446ve"]
stm32f446zc = ["stm32-metapac/stm32f446zc"]
stm32f446ze = ["stm32-metapac/stm32f446ze"]
stm32f469ae = ["stm32-metapac/stm32f469ae"]
stm32f469ag = ["stm32-metapac/stm32f469ag"]
stm32f469ai = ["stm32-metapac/stm32f469ai"]
stm32f469be = ["stm32-metapac/stm32f469be"]
stm32f469bg = ["stm32-metapac/stm32f469bg"]
stm32f469bi = ["stm32-metapac/stm32f469bi"]
stm32f469ie = ["stm32-metapac/stm32f469ie"]
stm32f469ig = ["stm32-metapac/stm32f469ig"]
stm32f469ii = ["stm32-metapac/stm32f469ii"]
stm32f469ne = ["stm32-metapac/stm32f469ne"]
stm32f469ng = ["stm32-metapac/stm32f469ng"]
stm32f469ni = ["stm32-metapac/stm32f469ni"]
stm32f469ve = ["stm32-metapac/stm32f469ve"]
stm32f469vg = ["stm32-metapac/stm32f469vg"]
stm32f469vi = ["stm32-metapac/stm32f469vi"]
stm32f469ze = ["stm32-metapac/stm32f469ze"]
stm32f469zg = ["stm32-metapac/stm32f469zg"]
stm32f469zi = ["stm32-metapac/stm32f469zi"]
stm32f479ag = ["stm32-metapac/stm32f479ag"]
stm32f479ai = ["stm32-metapac/stm32f479ai"]
stm32f479bg = ["stm32-metapac/stm32f479bg"]
stm32f479bi = ["stm32-metapac/stm32f479bi"]
stm32f479ig = ["stm32-metapac/stm32f479ig"]
stm32f479ii = ["stm32-metapac/stm32f479ii"]
stm32f479ng = ["stm32-metapac/stm32f479ng"]
stm32f479ni = ["stm32-metapac/stm32f479ni"]
stm32f479vg = ["stm32-metapac/stm32f479vg"]
stm32f479vi = ["stm32-metapac/stm32f479vi"]
stm32f479zg = ["stm32-metapac/stm32f479zg"]
stm32f479zi = ["stm32-metapac/stm32f479zi"]
stm32f722ic = ["stm32-metapac/stm32f722ic"]
stm32f722ie = ["stm32-metapac/stm32f722ie"]
stm32f722rc = ["stm32-metapac/stm32f722rc"]
stm32f722re = ["stm32-metapac/stm32f722re"]
stm32f722vc = ["stm32-metapac/stm32f722vc"]
stm32f722ve = ["stm32-metapac/stm32f722ve"]
stm32f722zc = ["stm32-metapac/stm32f722zc"]
stm32f722ze = ["stm32-metapac/stm32f722ze"]
stm32f723ic = ["stm32-metapac/stm32f723ic"]
stm32f723ie = ["stm32-metapac/stm32f723ie"]
stm32f723vc = ["stm32-metapac/stm32f723vc"]
stm32f723ve = ["stm32-metapac/stm32f723ve"]
stm32f723zc = ["stm32-metapac/stm32f723zc"]
stm32f723ze = ["stm32-metapac/stm32f723ze"]
stm32f730i8 = ["stm32-metapac/stm32f730i8"]
stm32f730r8 = ["stm32-metapac/stm32f730r8"]
stm32f730v8 = ["stm32-metapac/stm32f730v8"]
stm32f730z8 = ["stm32-metapac/stm32f730z8"]
stm32f732ie = ["stm32-metapac/stm32f732ie"]
stm32f732re = ["stm32-metapac/stm32f732re"]
stm32f732ve = ["stm32-metapac/stm32f732ve"]
stm32f732ze = ["stm32-metapac/stm32f732ze"]
stm32f733ie = ["stm32-metapac/stm32f733ie"]
stm32f733ve = ["stm32-metapac/stm32f733ve"]
stm32f733ze = ["stm32-metapac/stm32f733ze"]
stm32f745ie = ["stm32-metapac/stm32f745ie"]
stm32f745ig = ["stm32-metapac/stm32f745ig"]
stm32f745ve = ["stm32-metapac/stm32f745ve"]
stm32f745vg = ["stm32-metapac/stm32f745vg"]
stm32f745ze = ["stm32-metapac/stm32f745ze"]
stm32f745zg = ["stm32-metapac/stm32f745zg"]
stm32f746be = ["stm32-metapac/stm32f746be"]
stm32f746bg = ["stm32-metapac/stm32f746bg"]
stm32f746ie = ["stm32-metapac/stm32f746ie"]
stm32f746ig = ["stm32-metapac/stm32f746ig"]
stm32f746ne = ["stm32-metapac/stm32f746ne"]
stm32f746ng = ["stm32-metapac/stm32f746ng"]
stm32f746ve = ["stm32-metapac/stm32f746ve"]
stm32f746vg = ["stm32-metapac/stm32f746vg"]
stm32f746ze = ["stm32-metapac/stm32f746ze"]
stm32f746zg = ["stm32-metapac/stm32f746zg"]
stm32f750n8 = ["stm32-metapac/stm32f750n8"]
stm32f750v8 = ["stm32-metapac/stm32f750v8"]
stm32f750z8 = ["stm32-metapac/stm32f750z8"]
stm32f756bg = ["stm32-metapac/stm32f756bg"]
stm32f756ig = ["stm32-metapac/stm32f756ig"]
stm32f756ng = ["stm32-metapac/stm32f756ng"]
stm32f756vg = ["stm32-metapac/stm32f756vg"]
stm32f756zg = ["stm32-metapac/stm32f756zg"]
stm32f765bg = ["stm32-metapac/stm32f765bg"]
stm32f765bi = ["stm32-metapac/stm32f765bi"]
stm32f765ig = ["stm32-metapac/stm32f765ig"]
stm32f765ii = ["stm32-metapac/stm32f765ii"]
stm32f765ng = ["stm32-metapac/stm32f765ng"]
stm32f765ni = ["stm32-metapac/stm32f765ni"]
stm32f765vg = ["stm32-metapac/stm32f765vg"]
stm32f765vi = ["stm32-metapac/stm32f765vi"]
stm32f765zg = ["stm32-metapac/stm32f765zg"]
stm32f765zi = ["stm32-metapac/stm32f765zi"]
stm32f767bg = ["stm32-metapac/stm32f767bg"]
stm32f767bi = ["stm32-metapac/stm32f767bi"]
stm32f767ig = ["stm32-metapac/stm32f767ig"]
stm32f767ii = ["stm32-metapac/stm32f767ii"]
stm32f767ng = ["stm32-metapac/stm32f767ng"]
stm32f767ni = ["stm32-metapac/stm32f767ni"]
stm32f767vg = ["stm32-metapac/stm32f767vg"]
stm32f767vi = ["stm32-metapac/stm32f767vi"]
stm32f767zg = ["stm32-metapac/stm32f767zg"]
stm32f767zi = ["stm32-metapac/stm32f767zi"]
stm32f768ai = ["stm32-metapac/stm32f768ai"]
stm32f769ag = ["stm32-metapac/stm32f769ag"]
stm32f769ai = ["stm32-metapac/stm32f769ai"]
stm32f769bg = ["stm32-metapac/stm32f769bg"]
stm32f769bi = ["stm32-metapac/stm32f769bi"]
stm32f769ig = ["stm32-metapac/stm32f769ig"]
stm32f769ii = ["stm32-metapac/stm32f769ii"]
stm32f769ng = ["stm32-metapac/stm32f769ng"]
stm32f769ni = ["stm32-metapac/stm32f769ni"]
stm32f777bi = ["stm32-metapac/stm32f777bi"]
stm32f777ii = ["stm32-metapac/stm32f777ii"]
stm32f777ni = ["stm32-metapac/stm32f777ni"]
stm32f777vi = ["stm32-metapac/stm32f777vi"]
stm32f777zi = ["stm32-metapac/stm32f777zi"]
stm32f778ai = ["stm32-metapac/stm32f778ai"]
stm32f779ai = ["stm32-metapac/stm32f779ai"]
stm32f779bi = ["stm32-metapac/stm32f779bi"]
stm32f779ii = ["stm32-metapac/stm32f779ii"]
stm32f779ni = ["stm32-metapac/stm32f779ni"]
stm32l010c6 = ["stm32-metapac/stm32l010c6"]
stm32l010f4 = ["stm32-metapac/stm32l010f4"]
stm32l010k4 = ["stm32-metapac/stm32l010k4"]
stm32l010k8 = ["stm32-metapac/stm32l010k8"]
stm32l010r8 = ["stm32-metapac/stm32l010r8"]
stm32l010rb = ["stm32-metapac/stm32l010rb"]
stm32l011d3 = ["stm32-metapac/stm32l011d3"]
stm32l011d4 = ["stm32-metapac/stm32l011d4"]
stm32l011e3 = ["stm32-metapac/stm32l011e3"]
stm32l011e4 = ["stm32-metapac/stm32l011e4"]
stm32l011f3 = ["stm32-metapac/stm32l011f3"]
stm32l011f4 = ["stm32-metapac/stm32l011f4"]
stm32l011g3 = ["stm32-metapac/stm32l011g3"]
stm32l011g4 = ["stm32-metapac/stm32l011g4"]
stm32l011k3 = ["stm32-metapac/stm32l011k3"]
stm32l011k4 = ["stm32-metapac/stm32l011k4"]
stm32l021d4 = ["stm32-metapac/stm32l021d4"]
stm32l021f4 = ["stm32-metapac/stm32l021f4"]
stm32l021g4 = ["stm32-metapac/stm32l021g4"]
stm32l021k4 = ["stm32-metapac/stm32l021k4"]
stm32l031c4 = ["stm32-metapac/stm32l031c4"]
stm32l031c6 = ["stm32-metapac/stm32l031c6"]
stm32l031e4 = ["stm32-metapac/stm32l031e4"]
stm32l031e6 = ["stm32-metapac/stm32l031e6"]
stm32l031f4 = ["stm32-metapac/stm32l031f4"]
stm32l031f6 = ["stm32-metapac/stm32l031f6"]
stm32l031g4 = ["stm32-metapac/stm32l031g4"]
stm32l031g6 = ["stm32-metapac/stm32l031g6"]
stm32l031k4 = ["stm32-metapac/stm32l031k4"]
stm32l031k6 = ["stm32-metapac/stm32l031k6"]
stm32l041c4 = ["stm32-metapac/stm32l041c4"]
stm32l041c6 = ["stm32-metapac/stm32l041c6"]
stm32l041e6 = ["stm32-metapac/stm32l041e6"]
stm32l041f6 = ["stm32-metapac/stm32l041f6"]
stm32l041g6 = ["stm32-metapac/stm32l041g6"]
stm32l041k6 = ["stm32-metapac/stm32l041k6"]
stm32l051c6 = ["stm32-metapac/stm32l051c6"]
stm32l051c8 = ["stm32-metapac/stm32l051c8"]
stm32l051k6 = ["stm32-metapac/stm32l051k6"]
stm32l051k8 = ["stm32-metapac/stm32l051k8"]
stm32l051r6 = ["stm32-metapac/stm32l051r6"]
stm32l051r8 = ["stm32-metapac/stm32l051r8"]
stm32l051t6 = ["stm32-metapac/stm32l051t6"]
stm32l051t8 = ["stm32-metapac/stm32l051t8"]
stm32l052c6 = ["stm32-metapac/stm32l052c6"]
stm32l052c8 = ["stm32-metapac/stm32l052c8"]
stm32l052k6 = ["stm32-metapac/stm32l052k6"]
stm32l052k8 = ["stm32-metapac/stm32l052k8"]
stm32l052r6 = ["stm32-metapac/stm32l052r6"]
stm32l052r8 = ["stm32-metapac/stm32l052r8"]
stm32l052t6 = ["stm32-metapac/stm32l052t6"]
stm32l052t8 = ["stm32-metapac/stm32l052t8"]
stm32l053c6 = ["stm32-metapac/stm32l053c6"]
stm32l053c8 = ["stm32-metapac/stm32l053c8"]
stm32l053r6 = ["stm32-metapac/stm32l053r6"]
stm32l053r8 = ["stm32-metapac/stm32l053r8"]
stm32l062c8 = ["stm32-metapac/stm32l062c8"]
stm32l062k8 = ["stm32-metapac/stm32l062k8"]
stm32l063c8 = ["stm32-metapac/stm32l063c8"]
stm32l063r8 = ["stm32-metapac/stm32l063r8"]
stm32l071c8 = ["stm32-metapac/stm32l071c8"]
stm32l071cb = ["stm32-metapac/stm32l071cb"]
stm32l071cz = ["stm32-metapac/stm32l071cz"]
stm32l071k8 = ["stm32-metapac/stm32l071k8"]
stm32l071kb = ["stm32-metapac/stm32l071kb"]
stm32l071kz = ["stm32-metapac/stm32l071kz"]
stm32l071rb = ["stm32-metapac/stm32l071rb"]
stm32l071rz = ["stm32-metapac/stm32l071rz"]
stm32l071v8 = ["stm32-metapac/stm32l071v8"]
stm32l071vb = ["stm32-metapac/stm32l071vb"]
stm32l071vz = ["stm32-metapac/stm32l071vz"]
stm32l072cb = ["stm32-metapac/stm32l072cb"]
stm32l072cz = ["stm32-metapac/stm32l072cz"]
stm32l072kb = ["stm32-metapac/stm32l072kb"]
stm32l072kz = ["stm32-metapac/stm32l072kz"]
stm32l072rb = ["stm32-metapac/stm32l072rb"]
stm32l072rz = ["stm32-metapac/stm32l072rz"]
stm32l072v8 = ["stm32-metapac/stm32l072v8"]
stm32l072vb = ["stm32-metapac/stm32l072vb"]
stm32l072vz = ["stm32-metapac/stm32l072vz"]
stm32l073cb = ["stm32-metapac/stm32l073cb"]
stm32l073cz = ["stm32-metapac/stm32l073cz"]
stm32l073rb = ["stm32-metapac/stm32l073rb"]
stm32l073rz = ["stm32-metapac/stm32l073rz"]
stm32l073v8 = ["stm32-metapac/stm32l073v8"]
stm32l073vb = ["stm32-metapac/stm32l073vb"]
stm32l073vz = ["stm32-metapac/stm32l073vz"]
stm32l081cb = ["stm32-metapac/stm32l081cb"]
stm32l081cz = ["stm32-metapac/stm32l081cz"]
stm32l081kz = ["stm32-metapac/stm32l081kz"]
stm32l082cz = ["stm32-metapac/stm32l082cz"]
stm32l082kb = ["stm32-metapac/stm32l082kb"]
stm32l082kz = ["stm32-metapac/stm32l082kz"]
stm32l083cb = ["stm32-metapac/stm32l083cb"]
stm32l083cz = ["stm32-metapac/stm32l083cz"]
stm32l083rb = ["stm32-metapac/stm32l083rb"]
stm32l083rz = ["stm32-metapac/stm32l083rz"]
stm32l083v8 = ["stm32-metapac/stm32l083v8"]
stm32l083vb = ["stm32-metapac/stm32l083vb"]
stm32l083vz = ["stm32-metapac/stm32l083vz"]
stm32l100c6 = ["stm32-metapac/stm32l100c6"]
stm32l100c6-a = ["stm32-metapac/stm32l100c6-a"]
stm32l100r8 = ["stm32-metapac/stm32l100r8"]
stm32l100r8-a = ["stm32-metapac/stm32l100r8-a"]
stm32l100rb = ["stm32-metapac/stm32l100rb"]
stm32l100rb-a = ["stm32-metapac/stm32l100rb-a"]
stm32l100rc = ["stm32-metapac/stm32l100rc"]
stm32l151c6 = ["stm32-metapac/stm32l151c6"]
stm32l151c6-a = ["stm32-metapac/stm32l151c6-a"]
stm32l151c8 = ["stm32-metapac/stm32l151c8"]
stm32l151c8-a = ["stm32-metapac/stm32l151c8-a"]
stm32l151cb = ["stm32-metapac/stm32l151cb"]
stm32l151cb-a = ["stm32-metapac/stm32l151cb-a"]
stm32l151cc = ["stm32-metapac/stm32l151cc"]
stm32l151qc = ["stm32-metapac/stm32l151qc"]
stm32l151qd = ["stm32-metapac/stm32l151qd"]
stm32l151qe = ["stm32-metapac/stm32l151qe"]
stm32l151r6 = ["stm32-metapac/stm32l151r6"]
stm32l151r6-a = ["stm32-metapac/stm32l151r6-a"]
stm32l151r8 = ["stm32-metapac/stm32l151r8"]
stm32l151r8-a = ["stm32-metapac/stm32l151r8-a"]
stm32l151rb = ["stm32-metapac/stm32l151rb"]
stm32l151rb-a = ["stm32-metapac/stm32l151rb-a"]
stm32l151rc = ["stm32-metapac/stm32l151rc"]
stm32l151rc-a = ["stm32-metapac/stm32l151rc-a"]
stm32l151rd = ["stm32-metapac/stm32l151rd"]
stm32l151re = ["stm32-metapac/stm32l151re"]
stm32l151uc = ["stm32-metapac/stm32l151uc"]
stm32l151v8 = ["stm32-metapac/stm32l151v8"]
stm32l151v8-a = ["stm32-metapac/stm32l151v8-a"]
stm32l151vb = ["stm32-metapac/stm32l151vb"]
stm32l151vb-a = ["stm32-metapac/stm32l151vb-a"]
stm32l151vc = ["stm32-metapac/stm32l151vc"]
stm32l151vc-a = ["stm32-metapac/stm32l151vc-a"]
stm32l151vd = ["stm32-metapac/stm32l151vd"]
stm32l151vd-x = ["stm32-metapac/stm32l151vd-x"]
stm32l151ve = ["stm32-metapac/stm32l151ve"]
stm32l151zc = ["stm32-metapac/stm32l151zc"]
stm32l151zd = ["stm32-metapac/stm32l151zd"]
stm32l151ze = ["stm32-metapac/stm32l151ze"]
stm32l152c6 = ["stm32-metapac/stm32l152c6"]
stm32l152c6-a = ["stm32-metapac/stm32l152c6-a"]
stm32l152c8 = ["stm32-metapac/stm32l152c8"]
stm32l152c8-a = ["stm32-metapac/stm32l152c8-a"]
stm32l152cb = ["stm32-metapac/stm32l152cb"]
stm32l152cb-a = ["stm32-metapac/stm32l152cb-a"]
stm32l152cc = ["stm32-metapac/stm32l152cc"]
stm32l152qc = ["stm32-metapac/stm32l152qc"]
stm32l152qd = ["stm32-metapac/stm32l152qd"]
stm32l152qe = ["stm32-metapac/stm32l152qe"]
stm32l152r6 = ["stm32-metapac/stm32l152r6"]
stm32l152r6-a = ["stm32-metapac/stm32l152r6-a"]
stm32l152r8 = ["stm32-metapac/stm32l152r8"]
stm32l152r8-a = ["stm32-metapac/stm32l152r8-a"]
stm32l152rb = ["stm32-metapac/stm32l152rb"]
stm32l152rb-a = ["stm32-metapac/stm32l152rb-a"]
stm32l152rc = ["stm32-metapac/stm32l152rc"]
stm32l152rc-a = ["stm32-metapac/stm32l152rc-a"]
stm32l152rd = ["stm32-metapac/stm32l152rd"]
stm32l152re = ["stm32-metapac/stm32l152re"]
stm32l152uc = ["stm32-metapac/stm32l152uc"]
stm32l152v8 = ["stm32-metapac/stm32l152v8"]
stm32l152v8-a = ["stm32-metapac/stm32l152v8-a"]
stm32l152vb = ["stm32-metapac/stm32l152vb"]
stm32l152vb-a = ["stm32-metapac/stm32l152vb-a"]
stm32l152vc = ["stm32-metapac/stm32l152vc"]
stm32l152vc-a = ["stm32-metapac/stm32l152vc-a"]
stm32l152vd = ["stm32-metapac/stm32l152vd"]
stm32l152vd-x = ["stm32-metapac/stm32l152vd-x"]
stm32l152ve = ["stm32-metapac/stm32l152ve"]
stm32l152zc = ["stm32-metapac/stm32l152zc"]
stm32l152zd = ["stm32-metapac/stm32l152zd"]
stm32l152ze = ["stm32-metapac/stm32l152ze"]
stm32l162qc = ["stm32-metapac/stm32l162qc"]
stm32l162qd = ["stm32-metapac/stm32l162qd"]
stm32l162rc = ["stm32-metapac/stm32l162rc"]
stm32l162rc-a = ["stm32-metapac/stm32l162rc-a"]
stm32l162rd = ["stm32-metapac/stm32l162rd"]
stm32l162re = ["stm32-metapac/stm32l162re"]
stm32l162vc = ["stm32-metapac/stm32l162vc"]
stm32l162vc-a = ["stm32-metapac/stm32l162vc-a"]
stm32l162vd = ["stm32-metapac/stm32l162vd"]
stm32l162vd-x = ["stm32-metapac/stm32l162vd-x"]
stm32l162ve = ["stm32-metapac/stm32l162ve"]
stm32l162zc = ["stm32-metapac/stm32l162zc"]
stm32l162zd = ["stm32-metapac/stm32l162zd"]
stm32l162ze = ["stm32-metapac/stm32l162ze"]
stm32l412c8 = ["stm32-metapac/stm32l412c8"]
stm32l412cb = ["stm32-metapac/stm32l412cb"]
stm32l412k8 = ["stm32-metapac/stm32l412k8"]
stm32l412kb = ["stm32-metapac/stm32l412kb"]
stm32l412r8 = ["stm32-metapac/stm32l412r8"]
stm32l412rb = ["stm32-metapac/stm32l412rb"]
stm32l412t8 = ["stm32-metapac/stm32l412t8"]
stm32l412tb = ["stm32-metapac/stm32l412tb"]
stm32l422cb = ["stm32-metapac/stm32l422cb"]
stm32l422kb = ["stm32-metapac/stm32l422kb"]
stm32l422rb = ["stm32-metapac/stm32l422rb"]
stm32l422tb = ["stm32-metapac/stm32l422tb"]
stm32l431cb = ["stm32-metapac/stm32l431cb"]
stm32l431cc = ["stm32-metapac/stm32l431cc"]
stm32l431kb = ["stm32-metapac/stm32l431kb"]
stm32l431kc = ["stm32-metapac/stm32l431kc"]
stm32l431rb = ["stm32-metapac/stm32l431rb"]
stm32l431rc = ["stm32-metapac/stm32l431rc"]
stm32l431vc = ["stm32-metapac/stm32l431vc"]
stm32l432kb = ["stm32-metapac/stm32l432kb"]
stm32l432kc = ["stm32-metapac/stm32l432kc"]
stm32l433cb = ["stm32-metapac/stm32l433cb"]
stm32l433cc = ["stm32-metapac/stm32l433cc"]
stm32l433rb = ["stm32-metapac/stm32l433rb"]
stm32l433rc = ["stm32-metapac/stm32l433rc"]
stm32l433vc = ["stm32-metapac/stm32l433vc"]
stm32l442kc = ["stm32-metapac/stm32l442kc"]
stm32l443cc = ["stm32-metapac/stm32l443cc"]
stm32l443rc = ["stm32-metapac/stm32l443rc"]
stm32l443vc = ["stm32-metapac/stm32l443vc"]
stm32l451cc = ["stm32-metapac/stm32l451cc"]
stm32l451ce = ["stm32-metapac/stm32l451ce"]
stm32l451rc = ["stm32-metapac/stm32l451rc"]
stm32l451re = ["stm32-metapac/stm32l451re"]
stm32l451vc = ["stm32-metapac/stm32l451vc"]
stm32l451ve = ["stm32-metapac/stm32l451ve"]
stm32l452cc = ["stm32-metapac/stm32l452cc"]
stm32l452ce = ["stm32-metapac/stm32l452ce"]
stm32l452rc = ["stm32-metapac/stm32l452rc"]
stm32l452re = ["stm32-metapac/stm32l452re"]
stm32l452vc = ["stm32-metapac/stm32l452vc"]
stm32l452ve = ["stm32-metapac/stm32l452ve"]
stm32l462ce = ["stm32-metapac/stm32l462ce"]
stm32l462re = ["stm32-metapac/stm32l462re"]
stm32l462ve = ["stm32-metapac/stm32l462ve"]
stm32l471qe = ["stm32-metapac/stm32l471qe"]
stm32l471qg = ["stm32-metapac/stm32l471qg"]
stm32l471re = ["stm32-metapac/stm32l471re"]
stm32l471rg = ["stm32-metapac/stm32l471rg"]
stm32l471ve = ["stm32-metapac/stm32l471ve"]
stm32l471vg = ["stm32-metapac/stm32l471vg"]
stm32l471ze = ["stm32-metapac/stm32l471ze"]
stm32l471zg = ["stm32-metapac/stm32l471zg"]
stm32l475rc = ["stm32-metapac/stm32l475rc"]
stm32l475re = ["stm32-metapac/stm32l475re"]
stm32l475rg = ["stm32-metapac/stm32l475rg"]
stm32l475vc = ["stm32-metapac/stm32l475vc"]
stm32l475ve = ["stm32-metapac/stm32l475ve"]
stm32l475vg = ["stm32-metapac/stm32l475vg"]
stm32l476je = ["stm32-metapac/stm32l476je"]
stm32l476jg = ["stm32-metapac/stm32l476jg"]
stm32l476me = ["stm32-metapac/stm32l476me"]
stm32l476mg = ["stm32-metapac/stm32l476mg"]
stm32l476qe = ["stm32-metapac/stm32l476qe"]
stm32l476qg = ["stm32-metapac/stm32l476qg"]
stm32l476rc = ["stm32-metapac/stm32l476rc"]
stm32l476re = ["stm32-metapac/stm32l476re"]
stm32l476rg = ["stm32-metapac/stm32l476rg"]
stm32l476vc = ["stm32-metapac/stm32l476vc"]
stm32l476ve = ["stm32-metapac/stm32l476ve"]
stm32l476vg = ["stm32-metapac/stm32l476vg"]
stm32l476ze = ["stm32-metapac/stm32l476ze"]
stm32l476zg = ["stm32-metapac/stm32l476zg"]
stm32l486jg = ["stm32-metapac/stm32l486jg"]
stm32l486qg = ["stm32-metapac/stm32l486qg"]
stm32l486rg = ["stm32-metapac/stm32l486rg"]
stm32l486vg = ["stm32-metapac/stm32l486vg"]
stm32l486zg = ["stm32-metapac/stm32l486zg"]
stm32l496ae = ["stm32-metapac/stm32l496ae"]
stm32l496ag = ["stm32-metapac/stm32l496ag"]
stm32l496qe = ["stm32-metapac/stm32l496qe"]
stm32l496qg = ["stm32-metapac/stm32l496qg"]
stm32l496re = ["stm32-metapac/stm32l496re"]
stm32l496rg = ["stm32-metapac/stm32l496rg"]
stm32l496ve = ["stm32-metapac/stm32l496ve"]
stm32l496vg = ["stm32-metapac/stm32l496vg"]
stm32l496wg = ["stm32-metapac/stm32l496wg"]
stm32l496ze = ["stm32-metapac/stm32l496ze"]
stm32l496zg = ["stm32-metapac/stm32l496zg"]
stm32l4a6ag = ["stm32-metapac/stm32l4a6ag"]
stm32l4a6qg = ["stm32-metapac/stm32l4a6qg"]
stm32l4a6rg = ["stm32-metapac/stm32l4a6rg"]
stm32l4a6vg = ["stm32-metapac/stm32l4a6vg"]
stm32l4a6zg = ["stm32-metapac/stm32l4a6zg"]
stm32l4p5ae = ["stm32-metapac/stm32l4p5ae"]
stm32l4p5ag = ["stm32-metapac/stm32l4p5ag"]
stm32l4p5ce = ["stm32-metapac/stm32l4p5ce"]
stm32l4p5cg = ["stm32-metapac/stm32l4p5cg"]
stm32l4p5qe = ["stm32-metapac/stm32l4p5qe"]
stm32l4p5qg = ["stm32-metapac/stm32l4p5qg"]
stm32l4p5re = ["stm32-metapac/stm32l4p5re"]
stm32l4p5rg = ["stm32-metapac/stm32l4p5rg"]
stm32l4p5ve = ["stm32-metapac/stm32l4p5ve"]
stm32l4p5vg = ["stm32-metapac/stm32l4p5vg"]
stm32l4p5ze = ["stm32-metapac/stm32l4p5ze"]
stm32l4p5zg = ["stm32-metapac/stm32l4p5zg"]
stm32l4q5ag = ["stm32-metapac/stm32l4q5ag"]
stm32l4q5cg = ["stm32-metapac/stm32l4q5cg"]
stm32l4q5qg = ["stm32-metapac/stm32l4q5qg"]
stm32l4q5rg = ["stm32-metapac/stm32l4q5rg"]
stm32l4q5vg = ["stm32-metapac/stm32l4q5vg"]
stm32l4q5zg = ["stm32-metapac/stm32l4q5zg"]
stm32l4r5ag = ["stm32-metapac/stm32l4r5ag"]
stm32l4r5ai = ["stm32-metapac/stm32l4r5ai"]
stm32l4r5qg = ["stm32-metapac/stm32l4r5qg"]
stm32l4r5qi = ["stm32-metapac/stm32l4r5qi"]
stm32l4r5vg = ["stm32-metapac/stm32l4r5vg"]
stm32l4r5vi = ["stm32-metapac/stm32l4r5vi"]
stm32l4r5zg = ["stm32-metapac/stm32l4r5zg"]
stm32l4r5zi = ["stm32-metapac/stm32l4r5zi"]
stm32l4r7ai = ["stm32-metapac/stm32l4r7ai"]
stm32l4r7vi = ["stm32-metapac/stm32l4r7vi"]
stm32l4r7zi = ["stm32-metapac/stm32l4r7zi"]
stm32l4r9ag = ["stm32-metapac/stm32l4r9ag"]
stm32l4r9ai = ["stm32-metapac/stm32l4r9ai"]
stm32l4r9vg = ["stm32-metapac/stm32l4r9vg"]
stm32l4r9vi = ["stm32-metapac/stm32l4r9vi"]
stm32l4r9zg = ["stm32-metapac/stm32l4r9zg"]
stm32l4r9zi = ["stm32-metapac/stm32l4r9zi"]
stm32l4s5ai = ["stm32-metapac/stm32l4s5ai"]
stm32l4s5qi = ["stm32-metapac/stm32l4s5qi"]
stm32l4s5vi = ["stm32-metapac/stm32l4s5vi"]
stm32l4s5zi = ["stm32-metapac/stm32l4s5zi"]
stm32l4s7ai = ["stm32-metapac/stm32l4s7ai"]
stm32l4s7vi = ["stm32-metapac/stm32l4s7vi"]
stm32l4s7zi = ["stm32-metapac/stm32l4s7zi"]
stm32l4s9ai = ["stm32-metapac/stm32l4s9ai"]
stm32l4s9vi = ["stm32-metapac/stm32l4s9vi"]
stm32l4s9zi = ["stm32-metapac/stm32l4s9zi"]
stm32l552cc = ["stm32-metapac/stm32l552cc"]
stm32l552ce = ["stm32-metapac/stm32l552ce"]
stm32l552me = ["stm32-metapac/stm32l552me"]
stm32l552qc = ["stm32-metapac/stm32l552qc"]
stm32l552qe = ["stm32-metapac/stm32l552qe"]
stm32l552rc = ["stm32-metapac/stm32l552rc"]
stm32l552re = ["stm32-metapac/stm32l552re"]
stm32l552vc = ["stm32-metapac/stm32l552vc"]
stm32l552ve = ["stm32-metapac/stm32l552ve"]
stm32l552zc = ["stm32-metapac/stm32l552zc"]
stm32l552ze = ["stm32-metapac/stm32l552ze"]
stm32l562ce = ["stm32-metapac/stm32l562ce"]
stm32l562me = ["stm32-metapac/stm32l562me"]
stm32l562qe = ["stm32-metapac/stm32l562qe"]
stm32l562re = ["stm32-metapac/stm32l562re"]
stm32l562ve = ["stm32-metapac/stm32l562ve"]
stm32l562ze = ["stm32-metapac/stm32l562ze"]
stm32u535cb = ["stm32-metapac/stm32u535cb"]
stm32u535cc = ["stm32-metapac/stm32u535cc"]
stm32u535ce = ["stm32-metapac/stm32u535ce"]
stm32u535je = ["stm32-metapac/stm32u535je"]
stm32u535nc = ["stm32-metapac/stm32u535nc"]
stm32u535ne = ["stm32-metapac/stm32u535ne"]
stm32u535rb = ["stm32-metapac/stm32u535rb"]
stm32u535rc = ["stm32-metapac/stm32u535rc"]
stm32u535re = ["stm32-metapac/stm32u535re"]
stm32u535vc = ["stm32-metapac/stm32u535vc"]
stm32u535ve = ["stm32-metapac/stm32u535ve"]
stm32u545ce = ["stm32-metapac/stm32u545ce"]
stm32u545je = ["stm32-metapac/stm32u545je"]
stm32u545ne = ["stm32-metapac/stm32u545ne"]
stm32u545re = ["stm32-metapac/stm32u545re"]
stm32u545ve = ["stm32-metapac/stm32u545ve"]
stm32u575ag = ["stm32-metapac/stm32u575ag"]
stm32u575ai = ["stm32-metapac/stm32u575ai"]
stm32u575cg = ["stm32-metapac/stm32u575cg"]
stm32u575ci = ["stm32-metapac/stm32u575ci"]
stm32u575og = ["stm32-metapac/stm32u575og"]
stm32u575oi = ["stm32-metapac/stm32u575oi"]
stm32u575qg = ["stm32-metapac/stm32u575qg"]
stm32u575qi = ["stm32-metapac/stm32u575qi"]
stm32u575rg = ["stm32-metapac/stm32u575rg"]
stm32u575ri = ["stm32-metapac/stm32u575ri"]
stm32u575vg = ["stm32-metapac/stm32u575vg"]
stm32u575vi = ["stm32-metapac/stm32u575vi"]
stm32u575zg = ["stm32-metapac/stm32u575zg"]
stm32u575zi = ["stm32-metapac/stm32u575zi"]
stm32u585ai = ["stm32-metapac/stm32u585ai"]
stm32u585ci = ["stm32-metapac/stm32u585ci"]
stm32u585oi = ["stm32-metapac/stm32u585oi"]
stm32u585qi = ["stm32-metapac/stm32u585qi"]
stm32u585ri = ["stm32-metapac/stm32u585ri"]
stm32u585vi = ["stm32-metapac/stm32u585vi"]
stm32u585zi = ["stm32-metapac/stm32u585zi"]
stm32u595ai = ["stm32-metapac/stm32u595ai"]
stm32u595aj = ["stm32-metapac/stm32u595aj"]
stm32u595qi = ["stm32-metapac/stm32u595qi"]
stm32u595qj = ["stm32-metapac/stm32u595qj"]
stm32u595ri = ["stm32-metapac/stm32u595ri"]
stm32u595rj = ["stm32-metapac/stm32u595rj"]
stm32u595vi = ["stm32-metapac/stm32u595vi"]
stm32u595vj = ["stm32-metapac/stm32u595vj"]
stm32u595zi = ["stm32-metapac/stm32u595zi"]
stm32u595zj = ["stm32-metapac/stm32u595zj"]
stm32u599bj = ["stm32-metapac/stm32u599bj"]
stm32u599ni = ["stm32-metapac/stm32u599ni"]
stm32u599nj = ["stm32-metapac/stm32u599nj"]
stm32u599vi = ["stm32-metapac/stm32u599vi"]
stm32u599vj = ["stm32-metapac/stm32u599vj"]
stm32u599zi = ["stm32-metapac/stm32u599zi"]
stm32u599zj = ["stm32-metapac/stm32u599zj"]
stm32u5a5aj = ["stm32-metapac/stm32u5a5aj"]
stm32u5a5qj = ["stm32-metapac/stm32u5a5qj"]
stm32u5a5rj = ["stm32-metapac/stm32u5a5rj"]
stm32u5a5vj = ["stm32-metapac/stm32u5a5vj"]
stm32u5a5zj = ["stm32-metapac/stm32u5a5zj"]
stm32u5a9bj = ["stm32-metapac/stm32u5a9bj"]
stm32u5a9nj = ["stm32-metapac/stm32u5a9nj"]
stm32u5a9vj = ["stm32-metapac/stm32u5a9vj"]
stm32u5a9zj = ["stm32-metapac/stm32u5a9zj"]
stm32wb10cc = ["stm32-metapac/stm32wb10cc"]
stm32wb15cc = ["stm32-metapac/stm32wb15cc"]
stm32wb30ce = ["stm32-metapac/stm32wb30ce"]
stm32wb35cc = ["stm32-metapac/stm32wb35cc"]
stm32wb35ce = ["stm32-metapac/stm32wb35ce"]
stm32wb50cg = ["stm32-metapac/stm32wb50cg"]
stm32wb55cc = ["stm32-metapac/stm32wb55cc"]
stm32wb55ce = ["stm32-metapac/stm32wb55ce"]
stm32wb55cg = ["stm32-metapac/stm32wb55cg"]
stm32wb55rc = ["stm32-metapac/stm32wb55rc"]
stm32wb55re = ["stm32-metapac/stm32wb55re"]
stm32wb55rg = ["stm32-metapac/stm32wb55rg"]
stm32wb55vc = ["stm32-metapac/stm32wb55vc"]
stm32wb55ve = ["stm32-metapac/stm32wb55ve"]
stm32wb55vg = ["stm32-metapac/stm32wb55vg"]
stm32wb55vy = ["stm32-metapac/stm32wb55vy"]
stm32wba52ce = ["stm32-metapac/stm32wba52ce"]
stm32wba52cg = ["stm32-metapac/stm32wba52cg"]
stm32wba52ke = ["stm32-metapac/stm32wba52ke"]
stm32wba52kg = ["stm32-metapac/stm32wba52kg"]
stm32wl54cc-cm4 = ["stm32-metapac/stm32wl54cc-cm4"]
stm32wl54cc-cm0p = ["stm32-metapac/stm32wl54cc-cm0p"]
stm32wl54jc-cm4 = ["stm32-metapac/stm32wl54jc-cm4"]
stm32wl54jc-cm0p = ["stm32-metapac/stm32wl54jc-cm0p"]
stm32wl55cc-cm4 = ["stm32-metapac/stm32wl55cc-cm4"]
stm32wl55cc-cm0p = ["stm32-metapac/stm32wl55cc-cm0p"]
stm32wl55jc-cm4 = ["stm32-metapac/stm32wl55jc-cm4"]
stm32wl55jc-cm0p = ["stm32-metapac/stm32wl55jc-cm0p"]
stm32wle4c8 = ["stm32-metapac/stm32wle4c8"]
stm32wle4cb = ["stm32-metapac/stm32wle4cb"]
stm32wle4cc = ["stm32-metapac/stm32wle4cc"]
stm32wle4j8 = ["stm32-metapac/stm32wle4j8"]
stm32wle4jb = ["stm32-metapac/stm32wle4jb"]
stm32wle4jc = ["stm32-metapac/stm32wle4jc"]
stm32wle5c8 = ["stm32-metapac/stm32wle5c8"]
stm32wle5cb = ["stm32-metapac/stm32wle5cb"]
stm32wle5cc = ["stm32-metapac/stm32wle5cc"]
stm32wle5j8 = ["stm32-metapac/stm32wle5j8"]
stm32wle5jb = ["stm32-metapac/stm32wle5jb"]
stm32wle5jc = ["stm32-metapac/stm32wle5jc"]
